feat: get user data
